# rwd-mysql-skill-toolkit

./: .gitignore  1stdesign.md  AGENTS.md  Q09_expanded.csv  README.md  Skill_Management.code-workspace  Skill_impove.md  cocom2_var.html  prompt.txt  q09_render_config.json  question_config_q09.csv  readme.md  requirements.txt  rwd-mysql-skill-toolkit .code-workspace
.agent/skills/anomaly-detection/: Makefile  README.md  SKILL.md  pyproject.toml  skill.yaml
.agent/skills/anomaly-detection/.github/workflows/: ci.yml
.agent/skills/anomaly-detection/configs/: default.yaml  large-scale.yaml  small-scale.yaml
.agent/skills/anomaly-detection/data/: synthetic_edc.csv
.agent/skills/anomaly-detection/deploy/: Dockerfile
.agent/skills/anomaly-detection/deploy/grafana/: dashboard.json
.agent/skills/anomaly-detection/deploy/k8s/: configmap.yaml  deployment.yaml  service.yaml
.agent/skills/anomaly-detection/deploy/prometheus/: rules.yaml
.agent/skills/anomaly-detection/docs/: api_reference.md  architecture.md  operations.md  research_report_ja.md  test_plan.md
.agent/skills/anomaly-detection/docs/prompts/: developer_prompt.md  system_prompt.md  user_prompt_template.md
.agent/skills/anomaly-detection/docs/schemas/: input.schema.json  (+1 more)
.agent/skills/anomaly-detection/outputs/: anomaly_results.jsonl
.agent/skills/anomaly-detection/patches/: 0001-initial-skill-scaffold.patch
.agent/skills/anomaly-detection/scripts/: benchmark.py  generate_synth.py  infer.py  train.py
.agent/skills/anomaly-detection/tests/: test_pipeline.py  test_rules.py  test_schemas.py
(+372 files in other folders)
